Fixes navbar (previously hidden behind testimonials)

--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -100,6 +100,7 @@ nav {
   top: 0;
   left: 0;
   color: $white;
+  z-index: 2000;
   background: rgba($black, 0.9);
   -webkit-backdrop-filter: blur(1em);
   padding: 1.5em 0;
@@ -336,7 +337,7 @@ section.testimonials {
 }
 
 section#application {
-  z-index: 1000;
+  z-index: 10000;
   width: 100%;
   height: 100%;
   position: fixed;
